--- a/css/styles-bio.css
+++ b/css/styles-bio.css
@@ -40,11 +40,32 @@ h1 {
     text-align: center;
 }
 
- p {
+p {
     text-indent: 30px;
     font-size: 20px;
     color: black;
     font-family: Helvetica;
+}
+
+@media (max-width: 950px) {
+    .ajustador-2 {
+        max-width: 250px;
+        padding: 70px 0;
+        justify-content: center;
+    }
+
+    .bioFoto {
+        margin-right: 0;
+    }
+
+    h1 {
+        font-size: 35px;
+    }
+
+    .sobre-mim p {
+        font-size: 19px;
+        text-indent: 0;
+    }
 }
 
 @media (max-width: 768px) {
