--- a/css/styles-bio.css
+++ b/css/styles-bio.css
@@ -14,7 +14,7 @@
 }
 
 h1 {
-    font-family: 'Helvetica';
+    font-family: 'Poppins', sans-serif;
     font-size: 45px;
     color: black;
 }
@@ -42,9 +42,9 @@ h1 {
 
 p {
     text-indent: 30px;
-    font-size: 20px;
+    font-size: 19px;
     color: black;
-    font-family: Helvetica;
+    font-family: 'Poppins', sans-serif;
 }
 
 @media (max-width: 950px) {
